--- a/我不是楚月茗。.md
+++ b/我不是楚月茗。.md
@@ -2,6 +2,8 @@
 
 > 持续更新
 
+[markdown学习日志](https://github.com/Name-eee/Name-eee/tree/main "学习时的随手练，戳此处进入")
+
 ## 学习git的过程 [^method1]
 - [x] 下载git
 - [x] 初始化设置用户名邮箱
@@ -17,6 +19,9 @@
 - [ ] 深入学习
 
 ---
+[markdown学习日志][m]
+
+[m]:https://github.com/Name-eee/Name-eee/tree/main "学习时的随手练，戳此处进入"
 
 ## 学习markdown的过程[^method2]
 - [x] 了解markdown(百度)
@@ -27,9 +32,9 @@
 
 ---
 
-## 学习markdown的实践
+## 学习markdown的实践(戳此进入->[markdown学习日志][m]）
 * 用StackEdit尝试各类符号
-* 用GitHub尝试编写学习日志（此处应有链接）
+* 用GitHub尝试编写学习日志（[markdown学习日志][m]）
 * 用GitHub尝试编写学习报告（你现在正在看的东西）
 - 未完待续
 
